# finetuning-embeddings

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  embedding_playbook.yml  pyproject.toml
.github/workflows/actions/install_dependencies/: action.yml
docs/source/: conf.py  index.rst
experiments/configs/: embedding_configs.yaml
experiments/notebooks/: first_test.ipynb
experiments/results/: README.md
experiments/scripts/: embedding_tests.py  exp_finetuning_embeddings_matryoshka-2d.py  exp_finetuning_embeddings_matryoshka.py  exp_finetuning_embeddings_matryoshka_anchor_positive_pairs.py  exp_finetuning_embeddings_mnrl_matryoshka.py  exp_finetuning_embeddings_mnrl_triplet.py  exp_finetuning_embeddings_triplet.py
finetuning_embeddings/: __init__.py  data_generator.py  data_processor.py  embedding_data_processor.py  embedding_utils.py  processor.py  prompter.py  utils.py
tests/: test_utils.py
